--- a/snippets/externalstylesheet.html
+++ b/snippets/externalstylesheet.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title></title>
-        <link href="css/style.css" rel="stylesheet" th:href="@{css/style.css}">
+        <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
     
